# networking-project

./: .gitignore  README.md  capture.pcapng  dnsserver.py  httpserver.py  receiver.py  sender.py  shared.py  soundclient.py  soundserver.py  transmitter.py  transmitterclient.py  webserver.py
captures/: successful-capture.pcapng
docs/packet-structure/: .gitignore  info.tex
threadpool/: Cargo.toml
threadpool/src/: lib.rs
webserver/: Cargo.toml
webserver/pages/: error.html  index.html
webserver/src/: lib.rs  request.rs  response.rs
