[package]
name = "webserver"
description = "Toy webserver based on Ch.20 of The Book."
version = "0.1.0"
authors = ["Charles German <5donuts@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = { path = "../threadpool" }
log = "0.4"
env_logger = "0.8"
